# echoquize

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  compose.yml  config.py  justfile  plan-tasks.txt  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
context/: echoquize-plan.md
specs/001-echoquize-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-echoquize-tts/checklists/: readiness.md  requirements.md
specs/001-echoquize-tts/contracts/: README.md  config.md  database.md  storage-backend.md  tag-writer.md  tts-client.md  ui-contract.md
specs/002-studio-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-studio-enhancements/checklists/: requirements.md
specs/002-studio-enhancements/contracts/: README.md  config.md  database.md  naming.md  storage-backend.md  tag-writer.md  ui-contract.md  version.md
src/: __init__.py  naming.py  version.py
src/db/: database.py
src/storage/: __init__.py  base.py  gdrive.py  local.py  s3.py
src/tags/: __init__.py  writer.py
src/tts/: __init__.py  client.py
src/ui/: generate_tab.py  library_tab.py  tag_fields.py
