[project]
name = "echoquize"
version = "0.1.0"
description = "Self-hosted text-to-speech studio (OpenAI TTS + Gradio)"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.17.3",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.43.26",
]
